Corrected user settings wrapper not aligning

--- a/css/styles.css
+++ b/css/styles.css
@@ -345,6 +345,9 @@ button {
 input {
   outline: none;
 }
+.user {
+  width: 100%;
+}
 .send {
   background-color: #EADF74;
   padding: 10px;
@@ -411,6 +414,10 @@ select {
     margin-left: 30px;
 }
 /* Settings */
+.message-wrapper {
+  display: inline-block;
+  width: 50%;
+}
 .settings {
   width: 45%;
 }
@@ -504,6 +511,9 @@ select {
   }
   .search {
     display: none;
+  }
+  .member-settings {
+    width: 100%;
   }
   .social-container {
     display: flex;
